2020-07-19  Mark Wielaard  <mark@klomp.org>

	* libebl.h: Only typedef Ebl if _LIBASM_H is undefined.

2020-06-10  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (i386_init, sh_init, x86_64_init, ia64_init,
	alpha_init, arm_init, aarch64_init, sparc_init, ppc_init,
	ppc64_init, s390_init, tilegx_init, m68k_init, bpf_init,
	riscv_init, csky_init): Adjust signature.
	(openbackend): Call init without sizeof(Ebl).
	* libeblP.h (ebl_bhinit_t): Adjust signature.

2020-06-04  Mark Wielaard  <mark@klomp.org>

	* eblsegmenttypename.c (ebl_segment_type_name): Remove
	PT_GNU_PROPERTY define.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (default_debugscn_p): Handle .gnu.debuglto_
	prefix.

2020-02-08  Mark Wielaard  <mark@klomp.org>

	* eblsegmenttypename.c (ebl_segment_type_name): Handle
	PT_GNU_PROPERTY.

2019-08-29  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (noinst_LIBRARIES): Add libebl.a.
	(noinst_HEADERS): Add libebl.h.

2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am: Make libebl.a non-PIC by default.
	Add libebl_pic.a.
	Remove LIBEBL_SUBDIR definition.
	(gen_SOURCES): Remove.
	* eblopenbackend.c (machines): Replace dsoname with init callback.
	(try_dlopen): Remove.
	(openbackend): Use machine callback instead of try_dlopen().
	Don't assign result->dlhandle.
	* eblclosebackend.c (ebl_closebackend): Remove dlclose() call.

2019-04-29 Mao Han <han_mao@c-sky.com>

	* eblopenbackend.c: Add C-SKY.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (try_dlopen): Remove result->name check.
	(openbackend): Remove result->name assignment.
	(struct ebl): Remove name.

2019-05-30  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (try_dlopen): New function extracted from
	openbackend.
	(openbackend): Replace ORIGINDIR define with BINORIGINDIR and
	LIBORIGINDIR defines. Use tryopen to open backend in bin origin
	path, lib origin path and without an explicit path.

2019-04-28  Mark Wielaard  <mark@klomp.org>
